--- a/build.gradle
+++ b/build.gradle
@@ -195,8 +195,8 @@ dependencies {
         exclude module: 'htsjdk'
     }
 
-    compile 'org.broadinstitute:gatk-bwamem-jni:1.0.0-rc2-SNAPSHOT'
-    compile 'org.broadinstitute:gatk-fermilite-jni:1.0.0.-rc5-SNAPSHOT'
+    compile 'org.broadinstitute:gatk-bwamem-jni:1.0.0'
+    compile 'org.broadinstitute:gatk-fermilite-jni:1.0.0'
 
     //needed for DataflowAssert
     testCompile 'org.hamcrest:hamcrest-all:1.3'
